<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_weight="1"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_delivery"
                android:textColor="@color/black"
                android:textSize="@dimen/xxxlarge_text"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_paper_quantity"
                android:inputType="numberDecimal"
                android:layout_marginBottom="10dp"
                android:hint="@string/paper_quantity"
                android:textSize="@dimen/normal_text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_glass_quantity"
                android:inputType="numberDecimal"
                android:layout_marginBottom="10dp"
                android:hint="@string/glass_quantity"
                android:textSize="@dimen/normal_text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_plastic_quantity"
                android:inputType="numberDecimal"
                android:layout_marginBottom="20dp"
                android:hint="@string/plastic_quantity"
                android:textSize="@dimen/normal_text"/>
            <Button
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_action_barcode_2"
                android:padding="10dp"
                android:id="@+id/btn_read_qr"
                android:background="@drawable/button_green"
                android:text="@string/read_qr_code"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/tv_user_name"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:textSize="@dimen/xlarge_text"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:background="@drawable/button_green"
        android:text="@string/make_delivery"
        android:id="@+id/btn_make_delivery"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />
</LinearLayout>