<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/huge_text"
        android:id="@+id/tv_welcome_user"
        android:text="@string/hello_user"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/btn_register_delivery"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_green"
        android:padding="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/realizar_entrega"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/register_delivery"
            android:textSize="@dimen/normal_text"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/btn_manage_deliveries"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_green"
        android:padding="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_party_mode"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/manage_deliveries"
            android:textSize="@dimen/normal_text"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/btn_my_account"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_green"
        android:padding="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/perfil"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/my_account"
            android:textSize="@dimen/normal_text"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>